# metamorphosis

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  config.py  db.py  dependencies.py  main.py  models.py  users.py
backend/app/routes/: archetypes.py  sessions.py  skills.py  world_environments.py
frontend/: index.html  package.json
frontend/src/: App.js  apiClient.js
